--- a/therecipes/recipes.css
+++ b/therecipes/recipes.css
@@ -61,7 +61,7 @@ img{
     border-radius: 20px;
 }
 
-h3, ul, ol{
+.ingredients-h3, .ingredients-ul, .ingredients-ol{
     margin-left: 200px;
     color:#000000;
     font-size: 25px;
